--- a/index.html
+++ b/index.html
@@ -34,70 +34,73 @@
 
     </section>
 
-    <section id="home">
-      <h1>研究の背景</h1>
-      <p>
-
-北京長陽公園は、自宅の近くにある公園のひとつで、時々散歩に出かけます。
-春、夏、秋、冬、四季の景色が美しい場所です。
-
-フィットネスとエンターテイメント、落ち着いたムード、素晴らしい場所です。
-
-長陽公園は、房山区長陽町にあります。北京で建設中の11万エーカーの新しい公園の1つです。最大の陸地、地理的な場所、最も完全な緑化樹種、および最も完全なインフラストラクチャを備えた公園です。庭園では、人工の風景と元の生態学的な風景が組み合わさって、カラフルな園芸植物のコミュニティを形成し、都市の森の風景を作り出し、市民がリラックス、レクリエーション、フィットネスするのに理想的な場所を提供します。この庭園は、2013年に北京庭園を受賞しました緑化局は市の「質の高い公園」として評価されました。共植：53550本の木、19920本の灌木、717952年生の花、105743 105芝生、668914㎡地被。
-全体的な自然条件によれば、長陽公園は「2つの川と2つの庭園」の生態学的なウォーターフロントの景観を形成しています。
-
-一部の情報はインターネットで確認できますが、公式のWebサイトは存在していないので、私がデザインしたいと考えました。</p>
-    </section>
-
-    <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring_01.jpg">
-      <h1>about</h1>
-    </section>
-
     <section id="about">
+      <p>長陽公園は、房山区長陽町にあります。北京で建設中の11万エーカーの新しい公園の1つです。最大の陸地、地理的な場所、最も完全な緑化樹種、および最も完全なインフラストラクチャを備えた公園です。庭園では、人工の風景と元の生態学的な風景が組み合わさって、カラフルな園芸植物のコミュニティを形成し、都市の森の風景を作り出し、市民がリラックス、レクリエーション、フィットネスするのに理想的な場所を提供します。この庭園は、2013年に北京庭園を受賞しました緑化局は市の「質の高い公園」として評価されました。共植：53550本の木、19920本の灌木、717952年生の花、105743 105芝生、668914㎡地被。
+全体的な自然条件によれば、長陽公園は「2つの川と2つの庭園」の生態学的なウォーターフロントの景観を形成しています。</p>
+    </section>
+
+    <section class="parallax-window" data-parallax="scroll" data-image-src="images/other/other_23.jpg">
+      <a href="about.html">
+      <h1>about</h1>
+      </a>
+    </section>
+
+    <section id="spring">
       <h1>闲庭信步</h1>
       <p>
 散歩 "闲庭信步"スポットには、松云台、浣溪叠、枫舞清韵、涵秋叠影などのスポットがあります。全体的なテーマは木です。中庭をのんびり歩くなど、ゆったりとくつろげる場所を提供します。</p>
     </section>
 
+     <a href="spring.html">
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring_01.jpg">
+
       <h1>spring</h1>
+      </a>
       </section>
 
-    <section id="spring">
+    <section id="summer">
       <h1>春华秋实</h1>
       <p>「春华秋实」のシーンには、主に梨花の春の雪、ベゴニアフラワーストリーム、サクラダンスフライング、秀逸台、陳西広場などの景勝地があります。この地域は、「春に開花し、秋に果物を広げる」植物、したがって「春の花と秋の果物」が優勢です。</p>
     </section>
 
+      <a href="summer.html">
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer_01.jpg">
       <h1>summer</h1>
+      </a>
     </section>
 
-    <section id="summer">
+    <section id="autumn">
       <h1>寧夏の秋の風景</h1>
       <p>「寧夏の秋の風景」のレジャーとエンターテイメントの景勝地には、白州広場、観音流水遊歩道、サクラダンス、空飛ぶ森、子供たちの楽しい広場、フィットネストレイル、その他の景勝地があります。この部分は色とりどりの葉が多く、秋には晩秋に太陽が沈み、空は赤い雲でいっぱいで、赤いカエデの葉は空と共通です。</p>
     </section>
 
+         <a href="autumn.html">
         <section class="parallax-window" data-parallax="scroll" data-image-src="images/autumn_07.jpg">
           <h1>autumn</h1>
-        </section>
-
-        <section id="autumn">
-          <h1>autumn</h1>
-          <p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
-        </section>
-
-
-        <section class="parallax-window" data-parallax="scroll" data-image-src="images/winter_01.jpg">
-          <h1>winter</h1>
+          </a>
         </section>
 
         <section id="winter">
+          <h1>autumn</h1>
+          <p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
+        </section>
+
+
+          <a href="winter.html">
+        <section class="parallax-window" data-parallax="scroll" data-image-src="images/winter_01.jpg">
+          <h1>winter</h1>
+         </a>
+        </section>
+
+        <section id="other">
           <h1>winter</h1>
           <p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
         </section>
 
+          <a href="other.html">
         <section class="parallax-window" data-parallax="scroll" data-image-src="images/back.jpg">
           <h1>other</h1>
+        </a>
           </section>
         <section id="other">
           <h1>other</h1>
