--- a/summer.html
+++ b/summer.html
@@ -6,8 +6,8 @@
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/parallax.min.js"></script>
   <script src="js/script.js"></script>
-  <script src="js/flower.js" defer></script>
-<link rel="stylesheet" href="css/flower.css">
+  <script src="js/rain.js" defer></script>
+<link rel="stylesheet" href="css/rain.css">
   <link href="css/style.css" rel="stylesheet" >
   <title>BeijingchangyangPark</title>
 </head>
@@ -30,8 +30,8 @@
   </header>
 
 
-  <article class="FLOWER">
-          <div id="flowerContainer"></div>
+  <article class="RAIN">
+          <div id="rainContainer"></div>
         </div>
       </article>
 
@@ -48,7 +48,7 @@
 全体的な自然条件によれば、長陽公園は「2つの川と2つの庭園」の生態学的なウォーターフロントの景観を形成しています。</p>
     </section>
 
-    <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring_01.jpg">
+    <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_01.jpg">
       <h1>springt</h1>
     </section>
 
@@ -64,7 +64,7 @@
       </p>
     </section>
 
-    <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring/spring_02.jpg">
+    <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_02.jpg">
       <h1>spring2</h1>
       </section>
 
@@ -82,7 +82,7 @@
       </p>
     </section>
 
-    <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring/spring_03.jpg">
+    <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_03.jpg">
       <h1>spring3</h1>
     </section>
 
@@ -100,7 +100,7 @@
       </p>
     </section>
 
-        <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring/spring_04.jpg">
+        <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_04.jpg">
           <h1>spring4</h1>
         </section>
 
@@ -119,7 +119,7 @@
         </section>
 
 
-        <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring/spring_05.jpg">
+        <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_05.jpg">
           <h1>spring5</h1>
         </section>
 
@@ -137,7 +137,7 @@
           </p>
         </section>
 
-        <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring/spring_06.jpg">
+        <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_06.jpg">
           <h1>spring6</h1>
           </section>
         <section id="other">
@@ -154,7 +154,7 @@
           </p>
         </section>
 
-        <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring/spring_07.jpg">
+        <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_07.jpg">
           <h1>spring7</h1>
         </section>
 
@@ -172,7 +172,7 @@
           </p>
         </section>
 
-        <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring/spring_08.jpg">
+        <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_08.jpg">
           <h1>spring8</h1>
           </section>
         <section id="other">
