--- a/summer.html
+++ b/summer.html
@@ -32,24 +32,13 @@
 
   <article class="RAIN">
           <div id="rainContainer"></div>
-        </div>
       </article>
 
 
   <div id="home">
 
-    <section class="parallax-window" data-parallax="scroll" data-image-src="images/back.jpg">
-      <h1>home</h1>
-
-    </section>
-
-    <section id="home">
-      <p>長陽公園は、房山区長陽町にあります。北京で建設中の11万エーカーの新しい公園の1つです。最大の陸地、地理的な場所、最も完全な緑化樹種、および最も完全なインフラストラクチャを備えた公園です。庭園では、人工の風景と元の生態学的な風景が組み合わさって、カラフルな園芸植物のコミュニティを形成し、都市の森の風景を作り出し、市民がリラックス、レクリエーション、フィットネスするのに理想的な場所を提供します。この庭園は、2013年に北京庭園を受賞しました緑化局は市の「質の高い公園」として評価されました。共植：53550本の木、19920本の灌木、717952年生の花、105743 105芝生、668914㎡地被。
-全体的な自然条件によれば、長陽公園は「2つの川と2つの庭園」の生態学的なウォーターフロントの景観を形成しています。</p>
-    </section>
-
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_01.jpg">
-      <h1>springt</h1>
+      <h1>summer1</h1>
     </section>
 
     <section id="about">
@@ -65,7 +54,7 @@
     </section>
 
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_02.jpg">
-      <h1>spring2</h1>
+      <h1>summer2</h1>
       </section>
 
     <section id="spring">
@@ -83,7 +72,7 @@
     </section>
 
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_03.jpg">
-      <h1>spring3</h1>
+      <h1>summer3</h1>
     </section>
 
     <section id="summer">
@@ -101,7 +90,7 @@
     </section>
 
         <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_04.jpg">
-          <h1>spring4</h1>
+          <h1>summer4</h1>
         </section>
 
         <section id="autumn">
@@ -120,7 +109,7 @@
 
 
         <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_05.jpg">
-          <h1>spring5</h1>
+          <h1>summer5</h1>
         </section>
 
         <section id="winter">
@@ -138,7 +127,7 @@
         </section>
 
         <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_06.jpg">
-          <h1>spring6</h1>
+          <h1>summer6</h1>
           </section>
         <section id="other">
           <h1>2020年04月20日</h1>
@@ -155,7 +144,7 @@
         </section>
 
         <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_07.jpg">
-          <h1>spring7</h1>
+          <h1>summer7</h1>
         </section>
 
         <section id="winter">
@@ -173,7 +162,7 @@
         </section>
 
         <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_08.jpg">
-          <h1>spring8</h1>
+          <h1>summer8</h1>
           </section>
         <section id="other">
           <h1>2020年04月20日</h1>
