--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <header>
     <img src="./images/2.png">
 
-        <iframe width="500" scrolling="no" height="40" frameborder="0" allowtransparency="true" src="https://i.tianqi.com?c=code&id=40&color=%23C6C6C6&icon=2&site=12"></iframe>
     <h1>BeijingchangyangPark</h1>
     <nav>
       <ul>
@@ -35,6 +34,7 @@
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/back.jpg">
       <h1>home</h1>
 
+       <iframe width="800" scrolling="no" height="150" frameborder="0" allowtransparency="true" src="https://i.tianqi.com?c=code&id=48&icon=1&num=6&site=12"></iframe>
     </section>
 
     <section id="about">
