--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/parallax.min.js"></script>
   <script src="js/script.js"></script>
   <link href="css/style.css" rel="stylesheet" >
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+  <link rel="stylesheet" href="style.css">
   <title>BeijingchangyangPark</title>
 </head>
 
@@ -16,8 +19,17 @@
     <img src="./images/2.png">
 
     <h1>BeijingchangyangPark</h1>
+
+    <div class="navButton">
+            <span class="navButton-line"></span>
+            <span class="navButton-line"></span>
+            <span class="navButton-line"></span>
+          </div>
+
+
     <nav>
-      <ul>
+      <ul class="menu">
+
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#spring">Spring</a></li>
