--- a/autumn.html
+++ b/autumn.html
@@ -3,12 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/parallax.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/leaves.js" defer></script>
-<link rel="stylesheet" href="css/leaves.css">
+  <link rel="stylesheet" href="css/leaves.css">
   <link href="css/style.css" rel="stylesheet" >
+  <link rel="stylesheet" href="style.css">
   <title>BeijingchangyangPark</title>
 </head>
 
@@ -18,8 +21,16 @@
        <img src="./images/2.png">
 
     <h1>BeijingchangyangPark</h1>
+
+    <div class="navButton">
+            <span class="navButton-line"></span>
+            <span class="navButton-line"></span>
+            <span class="navButton-line"></span>
+          </div>
+
+
     <nav>
-      <ul>
+      <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="spring.html">Spring</a></li>
