--- a/winter.html
+++ b/winter.html
@@ -2,7 +2,15 @@
 <html lang="ja">
 
 <head>
-  <meta charset="utf-8" />
+  <head>
+    <meta charset="utf-8" />
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+    <script src="js/parallax.min.js"></script>
+    <link href="css/style.css" rel="stylesheet" >
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="style.css">
+
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/parallax.min.js"></script>
   <script src="js/script.js"></script>
@@ -25,11 +33,20 @@
         </article>
   <header>
     <img src="./images/2.png">
+    <body>
 
 
-    <h1>BeijingchangyangPark</h1>
-    <nav>
-      <ul>
+       <h1>BeijingchangyangPark</h1>
+
+        <div class="navButton">
+                <span class="navButton-line"></span>
+                <span class="navButton-line"></span>
+                <span class="navButton-line"></span>
+              </div>
+
+
+        <nav>
+          <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="spring.html">Spring</a></li>
