--- a/spring.html
+++ b/spring.html
@@ -52,7 +52,7 @@
 
 
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring_01.jpg">
-      <h1>springt</h1>
+      <h1>spring1</h1>
     </section>
 
     <section id="about">
