--- a/summer.html
+++ b/summer.html
@@ -8,7 +8,7 @@
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/parallax.min.js"></script>
   <script src="js/script.js"></script>
-
+  <script src="js/rain.js" defer></script>
 <link rel="stylesheet" href="css/rain.css">
   <link href="css/style.css" rel="stylesheet" >
   <title>BeijingchangyangPark</title>
