--- a/autumn.html
+++ b/autumn.html
@@ -58,14 +58,14 @@
 
       <h1>2020年11月19日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:58mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
-        Aperture number:f/5<br>
-        Exposure procedure:0<br>
-        Time of exposure:1/160
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 58mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
+        Aperture number : f/5<br>
+        Exposure procedure : 0<br>
+        Time of exposure : 1/160
       </p>
     </section>
 
@@ -77,14 +77,14 @@
 
       <h1>2020年11月19日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:32mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
-        Aperture number:f/5.6<br>
-        Exposure procedure:0<br>
-        Time of exposure:1/125
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 32mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
+        Aperture number : f/5.6<br>
+        Exposure procedure : 0<br>
+        Time of exposure : 1/125
       </p>
     </section>
 
@@ -96,14 +96,14 @@
     <section id="summer">
       <h1>2020年11月19日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:32mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
-        Aperture number:f/5.6<br>
-        Exposure procedure:0<br>
-        Time of exposure:1/125
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 32mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
+        Aperture number : f/5.6<br>
+        Exposure procedure : 0<br>
+        Time of exposure : 1/125
       </p>
     </section>
 
@@ -114,14 +114,14 @@
         <section id="autumn">
           <h1>2020年11月19日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:105mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5.6<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/250
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 105mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5.6<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/250
           </p>
         </section>
 
@@ -133,14 +133,14 @@
         <section id="winter">
           <h1>2020年11月19日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -150,14 +150,14 @@
         <section id="other">
           <h1>2020年11月19日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:34mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/6.3<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/250
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 34mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/6.3<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/250
           </p>
         </section>
 
@@ -168,14 +168,14 @@
         <section id="winter">
           <h1>2020年11月19日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:21mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/3.8<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/200
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 21mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/3.8<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/200
           </p>
         </section>
 
@@ -185,14 +185,14 @@
         <section id="other">
           <h1>2020年11月19日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:26mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/4<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/60
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 26mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/4<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/60
           </p>
         </section>
 
