--- a/spring.html
+++ b/spring.html
@@ -59,11 +59,11 @@
 
       <h1>2020年04月20日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:58mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 58mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
       </p>
     </section>
 
@@ -74,14 +74,14 @@
     <section id="spring">
       <h1>2020年04月20日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:58mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
-        Aperture number:f/5<br>
-        Exposure procedure:0<br>
-        Time of exposure:1/160
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 58mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
+        Aperture number : f/5<br>
+        Exposure procedure : 0<br>
+        Time of exposure : 1/160
       </p>
     </section>
 
@@ -92,14 +92,14 @@
     <section id="summer">
       <h1>2020年04月20日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:58mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
-        Aperture number:f/5<br>
-        Exposure procedure:0<br>
-        Time of exposure:1/160
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 58mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
+        Aperture number : f/5<br>
+        Exposure procedure : 0<br>
+        Time of exposure : 1/160
       </p>
     </section>
 
@@ -111,13 +111,13 @@
           <h1>2020年04月20日</h1>
           <p>
             Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -129,14 +129,14 @@
         <section id="winter">
           <h1>2020年04月20日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -146,14 +146,14 @@
         <section id="other">
           <h1>2020年04月20日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -164,14 +164,14 @@
         <section id="winter">
           <h1>2020年04月20日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -181,14 +181,14 @@
         <section id="other">
           <h1>2020年04月20日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
