--- a/summer.html
+++ b/summer.html
@@ -56,13 +56,13 @@
 
     <section id="about">
 
-      <h1>2020年04月20日</h1>
+      <h1>2020年06月21日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:58mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 58mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
       </p>
     </section>
 
@@ -71,16 +71,16 @@
       </section>
 
     <section id="spring">
-      <h1>2020年04月20日</h1>
+      <h1>2020年06月21日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:58mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
-        Aperture number:f/5<br>
-        Exposure procedure:0<br>
-        Time of exposure:1/160
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 58mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
+        Aperture number : f/5<br>
+        Exposure procedure : 0<br>
+        Time of exposure : 1/160
       </p>
     </section>
 
@@ -89,16 +89,16 @@
     </section>
 
     <section id="summer">
-      <h1>2020年04月20日</h1>
+      <h1>2020年06月21日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:58mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
-        Aperture number:f/5<br>
-        Exposure procedure:0<br>
-        Time of exposure:1/160
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 58mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
+        Aperture number : f/5<br>
+        Exposure procedure : 0<br>
+        Time of exposure : 1/160
       </p>
     </section>
 
@@ -107,16 +107,16 @@
         </section>
 
         <section id="autumn">
-          <h1>2020年04月20日</h1>
+          <h1>2020年06月21日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -128,14 +128,14 @@
         <section id="winter">
           <h1>2020年04月20日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -143,16 +143,16 @@
           <h1>summer6</h1>
           </section>
         <section id="other">
-          <h1>2020年04月20日</h1>
+          <h1>2020年06月21日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -161,16 +161,16 @@
         </section>
 
         <section id="winter">
-          <h1>2020年04月20日</h1>
+          <h1>2020年06月21日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -178,16 +178,16 @@
           <h1>summer8</h1>
           </section>
         <section id="other">
-          <h1>2020年04月20日</h1>
+          <h1>2020年06月21日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
