--- a/winter.html
+++ b/winter.html
@@ -66,12 +66,12 @@
 
     <section id="about">
 
-      <h1>2020年04月20日</h1>
+      <h1>2020年11月30日</h1>
       <p>
         Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:58mm<br>
-        Alpha channel:no<br>
+        Color space : RGB<br>
+        focal length : 58mm<br>
+        Alpha channel : no<br>
         Red eye:no<br>
       </p>
     </section>
@@ -81,16 +81,16 @@
       </section>
 
     <section id="spring">
-      <h1>2020年04月20日</h1>
+      <h1>2020年11月30日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:58mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
-        Aperture number:f/5<br>
-        Exposure procedure:0<br>
-        Time of exposure:1/160
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 58mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
+        Aperture number : f/5<br>
+        Exposure procedure : 0<br>
+        Time of exposure : 1/160
       </p>
     </section>
 
@@ -99,16 +99,16 @@
     </section>
 
     <section id="summer">
-      <h1>2020年04月20日</h1>
+      <h1>2020年11月30日</h1>
       <p>
-        Equipment model::NIKON D7000<br>
-        Color space:RGB<br>
-        focal length:58mm<br>
-        Alpha channel:no<br>
-        Red eye:no<br>
-        Aperture number:f/5<br>
-        Exposure procedure:0<br>
-        Time of exposure:1/160
+        Equipment model : NIKON D7000<br>
+        Color space : RGB<br>
+        focal length : 58mm<br>
+        Alpha channel : no<br>
+        Red eye : no<br>
+        Aperture number : f/5<br>
+        Exposure procedure : 0<br>
+        Time of exposure : 1/160
       </p>
     </section>
 
@@ -117,16 +117,16 @@
         </section>
 
         <section id="autumn">
-          <h1>2020年04月20日</h1>
+          <h1>2020年11月30日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -136,16 +136,16 @@
         </section>
 
         <section id="winter">
-          <h1>2020年04月20日</h1>
+          <h1>2020年11月30日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -153,16 +153,16 @@
           <h1>winter6</h1>
           </section>
         <section id="other">
-          <h1>2020年04月20日</h1>
+          <h1>2020年11月30日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -171,16 +171,16 @@
         </section>
 
         <section id="winter">
-          <h1>2020年04月20日</h1>
+          <h1>2020年11月30日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
@@ -188,16 +188,16 @@
           <h1>winter8</h1>
           </section>
         <section id="other">
-          <h1>2020年04月20日</h1>
+          <h1>2020年11月30日</h1>
           <p>
-            Equipment model::NIKON D7000<br>
-            Color space:RGB<br>
-            focal length:58mm<br>
-            Alpha channel:no<br>
-            Red eye:no<br>
-            Aperture number:f/5<br>
-            Exposure procedure:0<br>
-            Time of exposure:1/160
+            Equipment model : NIKON D7000<br>
+            Color space : RGB<br>
+            focal length : 58mm<br>
+            Alpha channel : no<br>
+            Red eye : no<br>
+            Aperture number : f/5<br>
+            Exposure procedure : 0<br>
+            Time of exposure : 1/160
           </p>
         </section>
 
